client/wfprev-war/src/main/angular/src/app/components/edit-project/activities/activities.component.scss
@import "../project-fiscals/project-fiscals.component.scss";

.fiscals-container{
    padding-top: 12px;
    margin: 0;
    .expansion-panel{
        border: 1px solid #D9D9D9;

        .mat-expansion-panel-header{
            border-bottom: 1px solid #D9D9D9;;
            min-height: 52px !important;
            height: auto !important;
        }
        
        .dropdown-button{
            cursor: pointer;
            span{
                padding-left: 10px;
            }
            &:disabled{
                background-color: #c0c0c0 !important;
                cursor: not-allowed;
                border: none;
            }
        }
    }
    
    .activity-header {
        ::ng-deep .mat-content {
            gap: 8px;
        }
    }
    
    .activity-title{
        font-family: var(--wf-font-family-main) !important;
        flex-wrap: wrap;
        color: #000;
        font-family: var(--wf-font-family-main);
        font-size: 20px;
        font-style: normal;
        font-weight: 400;
        line-height: normal;
        word-break: break-word;
        overflow-wrap: break-word;
        white-space: normal;
        .update-date{
            padding-top: 4px;
            font-size: 12px;
            font-style: italic;
            font-weight: 400;
            line-height: normal;
        }
    }

    .status-indicators {
        font-family: var(--wf-font-family-main);
        font-size: 16px;
        font-weight: 400;
        display: flex;
        align-items: center;
        gap: 10px;
        margin-left: auto;
        padding-right: 20px;
    }
    
    .status-tag {
        display: flex;
        padding: 5px 0px;
        align-items: center;
        gap: 5px;
        font-size: 16px;
    }

    .status-icon{
        width: 24px;
        height: 24px;
    }
    .two-columns{
        flex: 1 1 calc(50% - 20px) !important; // 2 items per row with a 20px gap
    }
    .three-columns{
        flex: 1 1 calc(33% - 20px) !important; // 3 items per row with a 20px gap
    }
    .form-item{
        flex: 1 1 calc(25% - 20px); // 4 items per row with a 20px gap  
        input,
        select{
            text-overflow: unset !important;
        }
    }
    .form-item.wide{
        grid-column: span 2;
        min-width: unset !important;
    }
    .full-width{
        flex: 1 1 100% !important;
    }
    .five-columns{
        flex: 1 1 calc(20% - 20px) !important; // 5 items per row with a 20px gap
    }

    .narrow-width{
        max-width: 210px;
    }

    .comment-container {
        display: flex;
        gap: 10px;
        align-items: flex-start;
    }
    
    .checkbox-container {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        .checkbox-label {
            padding: 0 !important;
            white-space: nowrap;
        }
    }
    
    .textarea-container {
        flex-grow: 1;
        width: 100%;
    }

    .first-section{
        display: flex;
        gap:20px;
        width: 100%;
        padding-top: 16px;
    }

    .currency-input {
        position: relative;
        display: flex;
        align-items: center;
    
        .currency-symbol {
            position: absolute;
            left: 10px;
            font-size: 16px;
            color: #282828;
        }
    
        input {
            padding-left: 20px;
        }
    }

    .comment-display {
        font-family: var(--wf-font-family-main);
        font-size: 16px;
        display:flex;
        padding-top: 8px;
        padding-left: 8px;
        font-weight: 700;
        color: #282828;
        cursor: pointer;
        border-bottom: none;
    }
    
    input#activityComment {
        border-bottom: 1px solid black; // Underline when editing
    }

    .mat-date-range-input {
        display: flex;
        justify-content: space-between;
        font-weight: 400;
        font-size: 16px;
        color: #282828;
        flex: 1 1 auto !important;
    }
    
    .mat-date-range-input input {
        border: none !important; /* Remove borders */
        box-shadow: none !important;
        text-align: center;
        background: transparent;
        margin: 0 !important;
    }
    
    .mat-form-field-appearance-outline .mat-form-field-outline {
        display: none !important; /* Hide the default outlined box */
    }
    
    .mat-datepicker-toggle {
        margin-left: 8px; /* Add space between date input and calendar icon */
    }
    
    .date-range-container {
        display: flex;
        align-items: center;
        width: 100%;
    }

    .date-range-container mat-form-field {
        flex: 1 1 auto;
        width: 100%;
    }

    .date-separator {
        margin: 0 5px;
      }

    input[readonly] {
        border-bottom: 1px dashed #2D2D2D !important;
        background-color: #FFF;
    }
}

.activity-files{
    padding: 15px;
}

.project-activity-footer {
    border-top: 1px solid #D9D9D9;
    .button-row {
        padding: 14px 17px 14px 23px;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .delete-container {
        flex: 1;
    }

    .delete {
        width: fit-content;
        display: flex;
        align-items: center;
        cursor: pointer;
        
        img {
          margin-right: 10px;
        }
      
        &-active span {
          color: #2D2D2D;
        }
      
        &-inactive {
          span {
            color: #9F9D9C;
          }
        }
    }

    .action-buttons {
        display: flex;
        gap: 10px; // Adjust spacing between Cancel & Save
    }
}

.custom-overlay-container .cdk-overlay-pane {
    left: 190px !important;
    transform: none !important;
}

:host ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
    background-color: white;
    padding: 8px 12px;
  }

:host ::ng-deep .mat-mdc-form-field-flex{
    height: 20px;
    margin: 4px;
}
:host ::ng-deep .mat-mdc-form-field-infix{
    padding: 0 !important;
}

.date-range-container .mat-date-range-input input {
  padding: 0 !important;     /* remove inner padding */
}

:host ::ng-deep .mat-mdc-checkbox-disabled .mdc-label {
  margin-left: 12px !important;
}

::ng-deep .mat-form-field-disabled .mdc-text-field {
    margin-top: 6px;
    height: 38px;
}

